# react-native-linux

./: .clang-format  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  .release-please-manifest.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
.husky/: pre-commit
apps/playground/: .gitignore  App.tsx  FpsOverlay.tsx  app.json  bundle.mjs  expo-blank.tsx  expo-modules-test.tsx  expo-router-tabs.tsx  expo-shims.d.ts  expo-tabs.tsx  index.js  index.jsx  index.tsx  jest.config.js  metro.config.js  package.json  paper-demo.tsx  react-native.config.js  smoke-demo.tsx  tsconfig.json
apps/playground/__test_metro_resolve__/: entry.js
apps/playground/linux/: CMakeLists.txt  CMakePresets.json  main.cpp  playground.desktop
apps/playground/runtime/: animated.js  async-storage.js  components.js  device-info.js  errorOverlay.js  expo-constants.js  expo-font.js  expo-linking.js  expo-router.js  expo-splash-screen.js  expo-status-bar.js  expo-symbols.js  expo-web-browser.js  expo.js  fabric.js  fabricHostConfig.js  flatlist.js  hostConfig.js  index.d.ts  index.js  modal.js  react-native-reanimated.js  react-native-safe-area-context.js  react-native-screens.js  react-native.js  shims.js  stylesheet.js  vendor.js
docs/: akari-shims.md  architecture.md  component-support.md  dev-vm.md  getting-started.md  native-modules.md  packaging.md  realworld-expo-battery-sharing.md  realworld-expo-camera.md  realworld-expo-clipboard.md  realworld-expo-file-system.md  realworld-expo-haptics.md  realworld-expo-image.md  realworld-expo-keep-awake.md  realworld-expo-localization.md  realworld-expo-location.md  realworld-expo-network.md  realworld-expo-notifications.md  realworld-expo-pickers.md  realworld-expo-print.md  realworld-expo-screen-capture.md  realworld-expo-secure-store.md  realworld-paper.md  troubleshooting.md  versioning.md
scripts/: test-metro-resolve.mjs
scripts/codegen/: run.js
scripts/package/: appimage.sh  deb.sh
scripts/test/: e2e.sh
scripts/vm/: build.sh  react-native-linux.yaml  run-playground.sh  sh.sh  shell.sh  start.sh  stop.sh  vnc.sh
template/: .gitignore  App.tsx  app.json  metro.config.js  package.json  react-native.config.js
template/linux/: CMakeLists.txt  CMakePresets.json  main.cpp
vnext/: CMakeLists.txt  CMakePresets.json
vnext/cmake/: Codegen.cmake  FetchBoost.cmake  FetchDoubleConversion.cmake  FetchFastFloat.cmake  FetchFmt.cmake  FetchFolly.cmake  FetchGlog.cmake  FetchHermes.cmake  FindGTK4.cmake  ReactNativeHeaders.cmake  react-native-linux.pc.in
vnext/include/react-native-linux/: CrashHandler.h  Logging.h  RNLinuxApplication.h  RNLinuxHost.h  TurboModuleRegistry.h
vnext/src/: CrashHandler.cpp  Logging.cpp  RNLinuxApplication.cpp  RNLinuxHost.cpp
vnext/src/camera/: Camera.cpp  Camera.h
vnext/src/components/: ActivityIndicator.cpp  ActivityIndicator.h  CameraView.cpp  CameraView.h  Switch.cpp  Switch.h  TextInput.cpp  TextInput.h
vnext/src/deviceinfo/: DeviceInfo.cpp  DeviceInfo.h
vnext/src/devtools/: MetroReloadClient.cpp
vnext/src/fabric/: JSExecutorStubs.cpp  LinuxComponentDescriptorRegistry.cpp  LinuxComponentDescriptorRegistry.h  LinuxComponentView.cpp  LinuxComponentView.h  LinuxComponentViewRegistry.cpp  LinuxComponentViewRegistry.h  LinuxMountingManager.cpp  LinuxMountingManager.h  LinuxSchedulerDelegate.cpp  LinuxSchedulerDelegate.h
vnext/src/filepicker/: FilePicker.cpp  FilePicker.h
vnext/src/filesystem/: FileSystem.cpp  FileSystem.h
vnext/src/jsi/: BundleLoader.cpp  BundleLoader.h  HermesRuntimeFactory.cpp  HermesRuntimeFactory.h  JsThread.cpp  JsThread.h  RnLinuxBindings.cpp  RnLinuxBindings.h  TurboModuleRegistry.cpp
vnext/src/keepawake/: KeepAwake.cpp  KeepAwake.h
vnext/src/locale/: Locale.cpp  Locale.h
vnext/src/location/: Location.cpp  Location.h
vnext/src/modules/: PlatformConstants.cpp
vnext/src/network/: Network.cpp  Network.h
vnext/src/notifications/: Notifications.cpp  Notifications.h
vnext/src/print/: Print.cpp  Print.h
vnext/src/securestore/: SecureStore.cpp  SecureStore.h
vnext/src/storage/: AsyncStorage.cpp
vnext/src/text/: PangoMarkup.cpp  PangoMarkup.h  TextLayoutManager.cpp
vnext/src/views/: ActivityIndicatorComponentView.cpp  ActivityIndicatorComponentView.h  CameraComponentView.cpp  CameraComponentView.h  ImageComponentView.cpp  ImageComponentView.h  ParagraphComponentView.cpp  ParagraphComponentView.h  ScrollViewComponentView.cpp  ScrollViewComponentView.h  SurfaceClamp.cpp  SurfaceClamp.h  SwitchComponentView.cpp  SwitchComponentView.h  TextInputComponentView.cpp  TextInputComponentView.h  ViewComponentView.cpp  ViewComponentView.h
vnext/tests/: CMakeLists.txt  ComponentViewRegistryTest.cpp
