cmake_minimum_required(VERSION 3.25)
project(react_native_linux
  VERSION 0.0.1 # x-release-please-version
  DESCRIPTION "React Native for Linux native runtime"
  LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

option(REACT_NATIVE_LINUX_BUILD_TESTS "Build vnext unit tests" OFF)
option(REACT_NATIVE_LINUX_USE_SYSTEM_HERMES "Use system-installed Hermes instead of FetchContent" OFF)
# Hermes' CDP (Chrome DevTools Protocol) sources at the RN 0.76.2 commit
# fail to build against GCC 13 / libstdc++ 13 (the Ubuntu 24.04 stack)
# with "incomplete type std::__cxx11::basic_string<char>" errors in
# cdp/DomainState.cpp — Hermes was developed against an older libstdc++
# that transitively included <string>. Default the inspector OFF on
# Linux until we land a patch (or bump Hermes past that fix). Opt back
# in with -DREACT_NATIVE_LINUX_ENABLE_INSPECTOR=ON once the patch is
# upstream.
option(REACT_NATIVE_LINUX_ENABLE_INSPECTOR "Enable Hermes Chrome inspector" OFF)

# ------------------------------------------------------------------
# Dependencies
# ------------------------------------------------------------------
include(FetchContent)
include(GNUInstallDirs)

find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)

include(FindGTK4)         # GTK4 via pkg-config
include(ReactNativeHeaders)  # locate node_modules/react-native
include(FetchHermes)      # Hermes runtime
include(FetchFolly)       # Folly (subset)
include(FetchGlog)        # glog
include(FetchFmt)         # fmt
include(FetchDoubleConversion)
include(FetchBoost)       # Boost (header-only subset)
include(Codegen)          # @react-native/codegen driver

# ------------------------------------------------------------------
# Shims for RN's platform-specific Cxx headers that don't live at
# their canonical include paths. We generate stubs in the build dir
# that #include the real files so upstream RN code compiles.
# ------------------------------------------------------------------
set(RNL_SHIM_DIR "${CMAKE_BINARY_DIR}/rnshim")
set(_tlm_src
  "${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx/TextLayoutManager.h")
set(_tlm_dst
  "${RNL_SHIM_DIR}/react/renderer/textlayoutmanager/TextLayoutManager.h")
file(WRITE "${_tlm_dst}"
  "// Auto-generated by vnext/CMakeLists.txt — see Phase 5.3 notes.\n"
  "#pragma once\n"
  "#include \"${_tlm_src}\"\n")

# ------------------------------------------------------------------
# Sources
# ------------------------------------------------------------------
set(RNL_PUBLIC_HEADERS
  include/react-native-linux/RNLinuxApplication.h
  include/react-native-linux/RNLinuxHost.h
  include/react-native-linux/Logging.h
  include/react-native-linux/CrashHandler.h
)

set(RNL_SOURCES
  src/RNLinuxApplication.cpp
  src/RNLinuxHost.cpp
  src/Logging.cpp
  src/CrashHandler.cpp
  src/fabric/LinuxSchedulerDelegate.cpp
  src/fabric/LinuxMountingManager.cpp
  src/fabric/LinuxComponentView.cpp
  src/fabric/LinuxComponentViewRegistry.cpp
  src/jsi/HermesRuntimeFactory.cpp
  src/jsi/BundleLoader.cpp
  src/jsi/RnLinuxBindings.cpp
  src/views/ViewComponentView.cpp
  src/views/ParagraphComponentView.cpp
  src/modules/PlatformConstants.cpp
  src/devtools/MetroReloadClient.cpp
  # Phase 5.3 step 1 — LinuxComponentDescriptorRegistry.cpp + the cxx
  # TextLayoutManager.cpp are temporarily out of the build. They
  # compile against the real RN Fabric headers, but instantiating the
  # descriptor providers drags in references to ShadowNode / Props /
  # Yoga implementation symbols that RN doesn't ship as a CMake target
  # on Linux. Re-add once we own those source lists (Phase 5.3 step 2).
  # src/fabric/LinuxComponentDescriptorRegistry.cpp
  # ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx/TextLayoutManager.cpp
)

add_library(react_native_linux ${RNL_SOURCES})
add_library(react_native_linux::react_native_linux ALIAS react_native_linux)

target_include_directories(react_native_linux
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${RN_LINUX_CODEGEN_OUTPUT_DIR}
    ${REACT_NATIVE_ROOT}/ReactCommon
    ${REACT_NATIVE_ROOT}/ReactCommon/jsi
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer
    # RN's renderer carries four subsystems with platform-specific
    # implementations under platform/{cxx,ios,android}/. The `cxx`
    # variant is portable; pick it for Linux. Each one provides headers
    # at platform/<plat>/react/renderer/.../HostPlatform*.h that
    # upstream RN includes unqualified.
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/graphics/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/view/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/imagemanager/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx
    # Yoga ships bundled inside RN — its public API is `<yoga/...>` from
    # ReactCommon/yoga/.
    ${REACT_NATIVE_ROOT}/ReactCommon/yoga
    # Shim headers (see top of file). Must come before ReactCommon so
    # our shim wins over any future RN-provided header at the same path.
    ${RNL_SHIM_DIR}
)

if(RN_LINUX_CODEGEN_AVAILABLE)
  add_dependencies(react_native_linux react_native_linux_codegen)
endif()

target_link_libraries(react_native_linux
  PUBLIC
    GTK4::GTK4
  PRIVATE
    Threads::Threads
    Hermes::Hermes
    Folly::folly
    glog::glog
    fmt::fmt
    double-conversion::double-conversion
    Boost::headers
)

target_compile_features(react_native_linux PUBLIC cxx_std_20)
target_compile_definitions(react_native_linux PRIVATE
  RNL_PLATFORM_LINUX=1
  $<$<BOOL:${REACT_NATIVE_LINUX_ENABLE_INSPECTOR}>:HERMES_ENABLE_DEBUGGER=1>
)

# Treat warnings seriously in our own code only. The handful of -Wno-*
# entries are workarounds for upstream RN / Hermes patterns that newer
# GCCs flag as errors-by-default; revisit when bumping RN past the
# corresponding fixes.
target_compile_options(react_native_linux PRIVATE
  -Wall -Wextra -Wpedantic
  -Wno-unused-parameter   # noisy with the many delegate methods
  -Wno-changes-meaning    # GCC 14+ flags RN's ConcreteShadowNode::Props
                          # method (same name as the Props type). GCC
                          # silently accepts unknown -Wno-* flags so
                          # older compilers ignore this harmlessly.
)

set_target_properties(react_native_linux PROPERTIES
  PUBLIC_HEADER "${RNL_PUBLIC_HEADERS}"
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
)

# ------------------------------------------------------------------
# Install
# ------------------------------------------------------------------
#
# We don't ship a CMake config (`find_package(react_native_linux)`) yet:
# Hermes is statically linked from the FetchContent build tree, which
# CMake refuses to include in an exported targets file. Downstream
# consumers should use `add_subdirectory(...)` (what the template does)
# or pkg-config, both of which work without exporting Hermes.
install(TARGETS react_native_linux
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/react-native-linux
)

# pkg-config descriptor for non-CMake consumers.
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/react-native-linux.pc.in
  ${CMAKE_CURRENT_BINARY_DIR}/react-native-linux.pc
  @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/react-native-linux.pc
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)

if(REACT_NATIVE_LINUX_BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
