cmake_minimum_required(VERSION 3.25)
project(react_native_linux
  VERSION 0.0.1 # x-release-please-version
  DESCRIPTION "React Native for Linux native runtime"
  LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

option(REACT_NATIVE_LINUX_BUILD_TESTS "Build vnext unit tests" OFF)
option(REACT_NATIVE_LINUX_USE_SYSTEM_HERMES "Use system-installed Hermes instead of FetchContent" OFF)
# Hermes' CDP (Chrome DevTools Protocol) sources at the RN 0.76.2 commit
# fail to build against GCC 13 / libstdc++ 13 (the Ubuntu 24.04 stack)
# with "incomplete type std::__cxx11::basic_string<char>" errors in
# cdp/DomainState.cpp — Hermes was developed against an older libstdc++
# that transitively included <string>. Default the inspector OFF on
# Linux until we land a patch (or bump Hermes past that fix). Opt back
# in with -DREACT_NATIVE_LINUX_ENABLE_INSPECTOR=ON once the patch is
# upstream.
option(REACT_NATIVE_LINUX_ENABLE_INSPECTOR "Enable Hermes Chrome inspector" OFF)

# ------------------------------------------------------------------
# Dependencies
# ------------------------------------------------------------------
include(FetchContent)
include(GNUInstallDirs)

find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)

include(FindGTK4)         # GTK4 via pkg-config

# Pango + cairo — used by our Pango-backed TextLayoutManager in
# rn_renderer for real text measurement. GTK4 transitively links
# these, but rn_renderer is a sibling static library that compiles
# first, so it needs its own pkg-config path.
pkg_check_modules(Pango REQUIRED IMPORTED_TARGET pangocairo)
include(ReactNativeHeaders)  # locate node_modules/react-native
include(FetchHermes)      # Hermes runtime
include(FetchFolly)       # Folly (subset)
include(FetchGlog)        # glog
include(FetchFmt)         # fmt
include(FetchDoubleConversion)
include(FetchBoost)       # Boost (header-only subset)
include(Codegen)          # @react-native/codegen driver

# ------------------------------------------------------------------
# Shims for RN's platform-specific Cxx headers that don't live at
# their canonical include paths. We generate stubs in the build dir
# that #include the real files so upstream RN code compiles.
# ------------------------------------------------------------------
set(RNL_SHIM_DIR "${CMAKE_BINARY_DIR}/rnshim")
set(_tlm_src
  "${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx/TextLayoutManager.h")
set(_tlm_dst
  "${RNL_SHIM_DIR}/react/renderer/textlayoutmanager/TextLayoutManager.h")
file(WRITE "${_tlm_dst}"
  "// Auto-generated by vnext/CMakeLists.txt — see Phase 5.3 notes.\n"
  "#pragma once\n"
  "#include \"${_tlm_src}\"\n")

# ------------------------------------------------------------------
# Sources
# ------------------------------------------------------------------
set(RNL_PUBLIC_HEADERS
  include/react-native-linux/RNLinuxApplication.h
  include/react-native-linux/RNLinuxHost.h
  include/react-native-linux/Logging.h
  include/react-native-linux/CrashHandler.h
)

set(RNL_SOURCES
  src/RNLinuxApplication.cpp
  src/RNLinuxHost.cpp
  src/Logging.cpp
  src/CrashHandler.cpp
  src/fabric/LinuxComponentDescriptorRegistry.cpp
  src/fabric/LinuxSchedulerDelegate.cpp
  src/fabric/LinuxMountingManager.cpp
  src/fabric/LinuxComponentView.cpp
  src/fabric/LinuxComponentViewRegistry.cpp
  src/fabric/JSExecutorStubs.cpp
  src/jsi/HermesRuntimeFactory.cpp
  src/jsi/BundleLoader.cpp
  src/jsi/RnLinuxBindings.cpp
  src/views/ViewComponentView.cpp
  src/views/ParagraphComponentView.cpp
  src/views/ScrollViewComponentView.cpp
  src/views/ImageComponentView.cpp
  src/views/TextInputComponentView.cpp
  src/components/TextInput.cpp
  src/modules/PlatformConstants.cpp
  src/devtools/MetroReloadClient.cpp
)

# ------------------------------------------------------------------
# RN renderer sources — compiled into a separate static library so we
# can apply per-target flags (no -Wpedantic etc.) without polluting our
# own warning hygiene. RN doesn't ship a Linux CMake target, but the
# files build fine with the same toolchain we use for everything else.
# ------------------------------------------------------------------
file(GLOB RNL_RN_RENDERER_SOURCES CONFIGURE_DEPENDS
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/core/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/componentregistry/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/attributedstring/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/graphics/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/graphics/platform/cxx/react/renderer/graphics/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/view/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/view/platform/cxx/react/renderer/components/view/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/text/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/scrollview/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/image/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/textinput/BaseTextInputProps.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/imagemanager/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/imagemanager/platform/cxx/react/renderer/imagemanager/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/legacyviewmanagerinterop/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/root/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/mounting/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/telemetry/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/runtimescheduler/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/scheduler/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/uimanager/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/uimanager/consistency/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/leakchecker/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/dom/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/observers/events/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/debug/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/featureflags/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/config/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/utils/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/debug/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/react/performance/timeline/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/logger/*.cpp
  ${REACT_NATIVE_ROOT}/ReactCommon/jsi/jsi/JSIDynamic.cpp
)
# Exclude any test files swept up by the globs above.
list(FILTER RNL_RN_RENDERER_SOURCES EXCLUDE REGEX "/tests/")
list(FILTER RNL_RN_RENDERER_SOURCES EXCLUDE REGEX "Test\\.cpp$")

# Drop RN's stock cxx TextLayoutManager.cpp — it always returns {0,0}
# from measure(), which leaves every <Text> Yoga node zero-height. We
# provide a Pango-backed replacement in vnext/src/text/TextLayoutManager
# .cpp (same class, same header from RN, real measurement).
list(FILTER RNL_RN_RENDERER_SOURCES EXCLUDE REGEX "textlayoutmanager/platform/cxx/TextLayoutManager\\.cpp$")

# Bring our Pango-backed replacement (and the markup helper it shares
# with ParagraphComponentView) into the same library that holds the
# rest of the renderer. Keeping them in rn_renderer means the
# TextLayoutManager class definition is satisfied from a single
# translation unit — no duplicate-symbol risk.
list(APPEND RNL_RN_RENDERER_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/src/text/PangoMarkup.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/text/TextLayoutManager.cpp
)

add_library(react_native_rn_renderer STATIC ${RNL_RN_RENDERER_SOURCES})
target_include_directories(react_native_rn_renderer
  PUBLIC
    ${REACT_NATIVE_ROOT}/ReactCommon
    ${REACT_NATIVE_ROOT}/ReactCommon/jsi
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/graphics/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/view/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/imagemanager
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/imagemanager/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx
    # RN's CallInvoker + RuntimeExecutor live under their own dirs as
    # <ReactCommon/CallInvoker.h> and <ReactCommon/RuntimeExecutor.h>;
    # the include base is the sibling `ReactCommon/` subdir.
    ${REACT_NATIVE_ROOT}/ReactCommon/callinvoker
    ${REACT_NATIVE_ROOT}/ReactCommon/runtimeexecutor
    ${REACT_NATIVE_ROOT}/ReactCommon/yoga
    ${RNL_SHIM_DIR}
)
target_link_libraries(react_native_rn_renderer
  PUBLIC
    Hermes::Hermes
    Folly::folly
    # Our Pango-backed TextLayoutManager.cpp lives in this library and
    # needs both pangocairo (font map + layout APIs) and cairo
    # itself. GTK4 transitively links them, but rn_renderer is built
    # before react_native_linux pulls GTK in, so we have to ask for
    # the include path + lib here directly.
    PkgConfig::Pango
    glog::glog
    fmt::fmt
    double-conversion::double-conversion
    Boost::headers
)
target_compile_features(react_native_rn_renderer PUBLIC cxx_std_20)
# Quiet upstream's GCC-flagged patterns and PIC for linking into our .so.
target_compile_options(react_native_rn_renderer PRIVATE
  -w                     # disable warnings for upstream sources
  -Wno-changes-meaning
  -fPIC
  # libstdc++ 13 tightened its transitive includes; RN headers assume
  # <cstdint>/<string>/<memory>/<vector> are pulled in by something
  # else. Inject them universally for these TUs. SHELL: keeps each
  # `-include HEADER` as two adjacent args; without it CMake collapses
  # them into a single "-include cstdint" arg that gcc misreads.
  "SHELL:-include cstdint"
  "SHELL:-include cstring"
  "SHELL:-include string"
  "SHELL:-include memory"
  "SHELL:-include vector"
)
# `__unused` is a clang/BSD compat macro RN uses (cxxreact/SystraceSection.h).
# GCC doesn't define it. Treat it as empty — the attribute only annotates
# parameters as intentionally unused; dropping it is harmless.
target_compile_definitions(react_native_rn_renderer PRIVATE
  __unused=
)

# Yoga lives bundled inside RN as a standalone CMake project; it exposes
# the `yogacore` static-lib target with the `<yoga/...>` include path.
add_subdirectory(
  ${REACT_NATIVE_ROOT}/ReactCommon/yoga
  ${CMAKE_BINARY_DIR}/yoga-build
  EXCLUDE_FROM_ALL)
set_property(TARGET yogacore PROPERTY POSITION_INDEPENDENT_CODE ON)

add_library(react_native_linux ${RNL_SOURCES})
add_library(react_native_linux::react_native_linux ALIAS react_native_linux)

target_include_directories(react_native_linux
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${RN_LINUX_CODEGEN_OUTPUT_DIR}
    ${REACT_NATIVE_ROOT}/ReactCommon
    ${REACT_NATIVE_ROOT}/ReactCommon/jsi
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer
    # RN's renderer carries four subsystems with platform-specific
    # implementations under platform/{cxx,ios,android}/. The `cxx`
    # variant is portable; pick it for Linux. Each one provides headers
    # at platform/<plat>/react/renderer/.../HostPlatform*.h that
    # upstream RN includes unqualified.
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/graphics/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/components/view/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/imagemanager/platform/cxx
    ${REACT_NATIVE_ROOT}/ReactCommon/react/renderer/textlayoutmanager/platform/cxx
    # Yoga ships bundled inside RN — its public API is `<yoga/...>` from
    # ReactCommon/yoga/.
    ${REACT_NATIVE_ROOT}/ReactCommon/yoga
    # Shim headers (see top of file). Must come before ReactCommon so
    # our shim wins over any future RN-provided header at the same path.
    ${RNL_SHIM_DIR}
)

if(RN_LINUX_CODEGEN_AVAILABLE)
  add_dependencies(react_native_linux react_native_linux_codegen)
endif()

target_link_libraries(react_native_linux
  PUBLIC
    GTK4::GTK4
  PRIVATE
    Threads::Threads
    Hermes::Hermes
    Folly::folly
    glog::glog
    fmt::fmt
    double-conversion::double-conversion
    Boost::headers
    # RN renderer .cpp set + bundled Yoga. Both static; link with
    # whole-archive so registry side-effects (descriptor providers
    # bootstrapping their statics) actually take.
    -Wl,--whole-archive
    react_native_rn_renderer
    -Wl,--no-whole-archive
    yogacore
)

# Fail the .so link if any reference goes unresolved. Without this,
# missing RN sources hide until a downstream executable (e.g.
# rn-linux-playground) tries to link and surfaces them — which costs a
# slow rebuild of everything to find out. Making the lib link strict
# moves that signal up to the cheap step.
target_link_options(react_native_linux PRIVATE
  -Wl,--no-undefined
)

target_compile_features(react_native_linux PUBLIC cxx_std_20)
target_compile_definitions(react_native_linux PRIVATE
  RNL_PLATFORM_LINUX=1
  $<$<BOOL:${REACT_NATIVE_LINUX_ENABLE_INSPECTOR}>:HERMES_ENABLE_DEBUGGER=1>
)

# Treat warnings seriously in our own code only. The handful of -Wno-*
# entries are workarounds for upstream RN / Hermes patterns that newer
# GCCs flag as errors-by-default; revisit when bumping RN past the
# corresponding fixes.
target_compile_options(react_native_linux PRIVATE
  -Wall -Wextra -Wpedantic
  -Wno-unused-parameter   # noisy with the many delegate methods
  -Wno-changes-meaning    # GCC 14+ flags RN's ConcreteShadowNode::Props
                          # method (same name as the Props type). GCC
                          # silently accepts unknown -Wno-* flags so
                          # older compilers ignore this harmlessly.
)

set_target_properties(react_native_linux PROPERTIES
  PUBLIC_HEADER "${RNL_PUBLIC_HEADERS}"
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
)

# ------------------------------------------------------------------
# Install
# ------------------------------------------------------------------
#
# We don't ship a CMake config (`find_package(react_native_linux)`) yet:
# Hermes is statically linked from the FetchContent build tree, which
# CMake refuses to include in an exported targets file. Downstream
# consumers should use `add_subdirectory(...)` (what the template does)
# or pkg-config, both of which work without exporting Hermes.
install(TARGETS react_native_linux
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/react-native-linux
)

# pkg-config descriptor for non-CMake consumers.
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/react-native-linux.pc.in
  ${CMAKE_CURRENT_BINARY_DIR}/react-native-linux.pc
  @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/react-native-linux.pc
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)

if(REACT_NATIVE_LINUX_BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
